--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <img src="image/uts des-01.png" width="100%" alt=""/>
   </div>
 
+   <div id="portofolio">
+  <img src="image/uts des-02.png" width="100%" alt="" class="fade-in"/>
+  <img src="image/uts des-03.png" width="100%" alt="" class="fade-in"/>
+  <img src="image/uts des-04.png" width="100%" alt="" class="fade-in"/>
+</div>
+
+<div id="activity">
+  <img src="image/uts des-05.png" width="100%" alt="" class="fade-in"/>
+  <img src="image/uts des-06.png" width="100%" alt="" class="fade-in"/>
+  <img src="image/uts des-07.png" width="100%" alt="" class="fade-in"/>
+</div>
+
   <div class="container">
     <input type="text" class="input-box" placeholder=" ">
   </div>
